--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@ layout: default
 
   <div class="row mt centered">
     <div class="col-md-6 col-md-offset-3 centered">
-      OWASP ZAP documentations
+      OWASP ZAP documentation
     </div>
   </div><!-- /row -->
 
