Add the link to "ZAP tips page"

--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@ layout: default
 
   <div class="row mt centered">
     <div class="col-md-6 col-md-offset-3 centered">
-      OWASP ZAP documentation
+      <a href="http://yukisov.github.io/zap-docs-japanese/" target="_blank">OWASP ZAP Tips</a>
     </div>
   </div><!-- /row -->
 
