Improve the email link on Contact page

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ layout: default
   </div>
   <div class="row mt">
     <div class="col-md-6 col-md-offset-3 centered">
-      yukisov@gmail.com
+      <a href="mailto:yukisov@gmail.com"><i class="fa fa-envelope"></i> yukisov@gmail.com</a>
     </div>
   </div><!-- /row -->
 </div><!-- /container -->
