--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ layout: default
 ---
 
 <!-- +++++ Welcome Section +++++ -->
-<div id="ww">
-    <div class="container">
-    <div class="row">
+<div class="container pt">
+    <div class="row mt">
       <div class="col-md-8 col-md-offset-2 centered">
         <div class="image">
           <img src="http://www.gravatar.com/avatar/75d298fa13be4443f22a5765005f06ba.png" alt="S.Yuki">
@@ -15,8 +14,7 @@ layout: default
 
       </div><!-- /col-md-8 -->
     </div><!-- /row -->
-    </div> <!-- /container -->
-</div><!-- /ww -->
+</div> <!-- /container -->
 
 
 <!-- +++++ Projects Section +++++ -->
