--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: default
 <!-- +++++ Welcome Section +++++ -->
 <div class="container pt">
     <div class="row mt">
-      <div class="col-lg-8 col-lg-offset-2 centered">
+      <div class="col-md-8 col-md-offset-2 centered">
         <div class="image">
           <img src="http://www.gravatar.com/avatar/75d298fa13be4443f22a5765005f06ba.png" alt="S.Yuki">
         </div>
