Add some works on work.html

--- a/work.html
+++ b/work.html
@@ -17,7 +17,15 @@ layout: default
 
   <div class="row mt centered">
     <div class="col-md-6 col-md-offset-3 centered">
-      <a href="http://yukisov.github.io/zap-docs-japanese/" target="_blank">OWASP ZAP Tips</a>
+      <p>
+        <a href="https://github.com/yukisov/web-sindan-crawler" target="_blank">web-sindan-crawler</a>
+      </p>
+      <p>
+        <a href="https://packagist.org/packages/zaproxy/php-owasp-zap-v2" target="_blank">zaproxy/php-owasp-zap-v2</a>
+      </p>
+      <p>
+        <a href="http://yukisov.github.io/zap-docs-japanese/" target="_blank">OWASP ZAP Tips</a>
+      </p>
     </div>
   </div><!-- /row -->
 
