--- a/work.html
+++ b/work.html
@@ -17,15 +17,27 @@ layout: default
 
   <div class="row mt centered">
     <div class="col-md-6 col-md-offset-3 centered">
+
       <p>
-        <a href="https://github.com/yukisov/web-sindan-crawler" target="_blank">web-sindan-crawler</a>
+        <a href="https://github.com/yukisov/web-sindan-crawler" target="_blank">クローラ耐性診断ツール - web-sindan-crawler</a>
       </p>
+
       <p>
-        <a href="https://packagist.org/packages/zaproxy/php-owasp-zap-v2" target="_blank">zaproxy/php-owasp-zap-v2</a>
+        <a href="http://www.pupha.net/owasp-zap/" target="_blank">OWASP ZAP に関する記事 - Articles about OWASP ZAP</a>
       </p>
+
+      <p>
+        <a href="https://packagist.org/packages/zaproxy/php-owasp-zap-v2" target="_blank">PHP Client API for OWASP ZAP - zaproxy/php-owasp-zap-v2</a>
+      </p>
+
       <p>
         <a href="http://yukisov.github.io/zap-docs-japanese/" target="_blank">OWASP ZAP Tips</a>
       </p>
+
+      <p>
+        <a href="http://www.pupha.net/owasp-bwa/" target="_blank">OWASP BWA に関する記事 - Articles about OWASP BWA</a>
+      </p>
+
     </div>
   </div><!-- /row -->
 
