Change the link of "ZAP Tips page"

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@ layout: default
       </p>
 
       <p>
-        <a href="http://yukisov.github.io/zap-docs-japanese/" target="_blank">OWASP ZAP Tips</a>
+        <a href="http://yukisov.github.io/zap-docs/" target="_blank">OWASP ZAP Tips</a>
       </p>
 
       <p>
