Update the expression of my name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         <div class="image">
           <img src="http://www.gravatar.com/avatar/75d298fa13be4443f22a5765005f06ba.png" alt="S.Yuki">
         </div>
-        <h1>S.Yuki</h1>
+        <h1>Yuki.S</h1>
 
       </div><!-- /col-md-8 -->
     </div><!-- /row -->
