--- a/work.html
+++ b/work.html
@@ -19,6 +19,10 @@ layout: default
     <div class="col-md-6 col-md-offset-3 centered">
 
       <p>
+        <a href="http://code4sec.com" target="_blank">Secure Code Tips</a>
+      </p>
+
+      <p>
         <a href="https://github.com/yukisov/web-sindan-crawler" target="_blank">クローラ耐性診断ツール - web-sindan-crawler</a>
       </p>
 
