Add new link in work.html

--- a/work.html
+++ b/work.html
@@ -42,6 +42,10 @@ layout: default
         <a href="http://www.pupha.net/owasp-bwa/" target="_blank">OWASP BWA に関する記事 - Articles about OWASP BWA</a>
       </p>
 
+      <p>
+        <a href="http://misc.pupha.net/confidence_interval.html" target="_blank">選挙：出口調査から得票率の信頼区間を算出する</a>
+      </p>
+
     </div>
   </div><!-- /row -->
 
